--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
 </head>
 <body>
 
-    <button class="playerOneHuman ">HUMAN</button>
-    <button class="playerOneAI">AI</button>
-    <button class="playerTwoHuman">HUMAN</button>
-    <button class="playerTwoAI">AI</button>
-    
-<div class="game-board">
-    <div class="board-grid"></div>
-    <div class="board-grid"></div>
-    <div class="board-grid"></div>
-    <div class="board-grid"></div>
-    <div class="board-grid"></div>
-    <div class="board-grid"></div>
-    <div class="board-grid"></div>
-    <div class="board-grid"></div>
-    <div class="board-grid"></div>
+<div class="container">
+    <h1 class="title">Tic-Tac-Toe</h1>
+    <div class="game-board">
+        <div class="board-grid"></div>
+        <div class="board-grid"></div>
+        <div class="board-grid"></div>
+        <div class="board-grid"></div>
+        <div class="board-grid"></div>
+        <div class="board-grid"></div>
+        <div class="board-grid"></div>
+        <div class="board-grid"></div>
+        <div class="board-grid"></div>
+    </div>
+
 </div>
+    
+
 
 </body>
 </html>
